Bug 496213 - After 3-finger swiping on the touchscreen to switch virtual desktop, window cannot be dragged by touchscreen but only by cursor or touchpad
Summary: After 3-finger swiping on the touchscreen to switch virtual desktop, window c...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 6.2.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-13 12:20 UTC by postix
Modified: 2024-11-14 17:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2024-11-13 12:20:54 UTC
STEPS TO REPRODUCE
1. Laptop with a built in touchscreen.
2. Open the overview effect
3. Do a 3-finger swipe to switch the virtual desktop
4. Try to drag a window to move it onto a different virtual desktop

OBSERVED RESULT

Dragging does work with the touchpad, but it does not work with the touchscreen!
There's no relevant debug log in journalctl or dmesg.

This issue does not appear when the VDs are switched with the touchpad or hotkeys in beforehand.

EXPECTED RESULT

Dragging also works with the touchscreen.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.3
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Kernel Version: 6.11.7-300.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 1 postix 2024-11-13 12:22:00 UTC
3. Do a 3-finger swipe ON THE TOUCHSCREEN to switch the virtual desktop
Comment 2 Bug Janitor Service 2024-11-13 16:13:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6766
Comment 3 Zamundaaa 2024-11-14 17:54:05 UTC
Git commit 1649cbb8df6045959d673ae9240fbdc46efdbf75 by Xaver Hugl.
Committed on 14/11/2024 at 17:38.
Pushed by zamundaaa into branch 'master'.

effect: plumb through touch cancel events and forward them to qtquick

M  +4    -0    src/effect/effect.cpp
M  +5    -0    src/effect/effect.h
M  +7    -0    src/effect/effecthandler.cpp
M  +1    -0    src/effect/effecthandler.h
M  +10   -0    src/effect/offscreenquickview.cpp
M  +1    -0    src/effect/offscreenquickview.h
M  +7    -0    src/effect/quickeffect.cpp
M  +1    -0    src/effect/quickeffect.h
M  +5    -0    src/input.cpp

https://invent.kde.org/plasma/kwin/-/commit/1649cbb8df6045959d673ae9240fbdc46efdbf75