effect: plumb through touch cancel events and forward them to qtquick

BUG: 496213