src/effect/quickeffect.h
@@ -149,6 +149,7 @@ public:
     bool touchDown(qint32 id, const QPointF &pos, std::chrono::microseconds time) override;
     bool touchMotion(qint32 id, const QPointF &pos, std::chrono::microseconds time) override;
     bool touchUp(qint32 id, std::chrono::microseconds time) override;
+    void touchCancel() override;
 
     static bool supported();
 
